--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ numpy==1.26.2
 scikit-learn==1.3.2
 catboost==1.2.2
 tensorflow==2.15.0
-shap==0.44.0
+shap==0.50.0
 matplotlib==3.8.2
 seaborn==0.13.0
 joblib==1.3.2
+lightgbm==4.6.0
+xgboost==3.0.2
+imbalanced-learn==0.14.0
 streamlit==1.28.0
 plotly==5.17.0
-
